# atcoder-template

./: .gitmodules  CMakeLists.txt  README_TEST.md  all.hpp  arysystem.hpp  build_and_test.sh  combinations.hpp  debugprint.hpp  edit_distance.hpp  enum_divisors.hpp  fastio.hpp  gcd_lcm.hpp  inverse_element.hpp  ioutility.hpp  ispalindrome.hpp  isprime.hpp  powmod.hpp  prime_factorize.hpp  rud.hpp  sha256.hpp  test_utilities.cpp  unique_erase.hpp
.github/workflows/: cpp-standards.yml  quick-test.yml  test.yml
